c4prj2_input/grade.txt
Grading at Thu Oct  3 04:14:58 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:35:2: error: expected ‘;’ before ‘}’ token
  }
  ^
Compilation of future.c failed

Overall Grade: F
